--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
 <html>
-
-
+	<head>
+		<title>Notes</title>
+		<script src="localforage.min.js"></script>
+		<script src="script.js"></script>
+	</head>
+	
+	<body>
+		<h1>Notes</h1>
+		<ul>
+		</ul>
+	</body>
 </html>
