--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 		</ul>
 
 		<input id='note' placeholder="Note Text" type="text">
-		<button style="margin-top:10px">Add note</button>
+		<button style="margin-top:10px" onclick="addItem()">Add note</button>
 	</body>
 </html>
