--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 	
 	<body>
 		<h1>Notes</h1>
-		<ul id='notes'>
-		</ul>
+		<ul id='notes'></ul>
 
 		<input id='note' placeholder="Note Text" type="text">
 		<button style="margin-top:10px" onclick="addItem()">Add note</button>
