Added vue branch

--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<html>
-	<head>
-		<title>Notes</title>
-		<script src="script.js" defer></script>
-	</head>
-	
-	<body>
-		<h1>Notes</h1>
-		<ul id='notes'></ul>
-
-		<input id='note' placeholder="Note Text" type="text">
-		<button style="margin-top:10px" onclick="addItem()">Add note</button>
-	</body>
-</html>
+<div id='app'></div>
